[tool.poetry]
name = "mytoyota"
description = "Python client for Toyota Connected Services."
authors = ["Simon Grud Hansen <simongrud@gmail.com>"]
license = "MIT"
readme = "README.md"
version = "1.0.0"
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = [
    "Toyota",
    "Car",
    "MYT",
]
homepage = "https://github.com/DurgNomis-drol/mytoyota"
repository = "https://github.com/DurgNomis-drol/mytoyota"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/DurgNomis-drol/mytoyota/issues"
"Release Notes" = "https://github.com/DurgNomis-drol/mytoyota/releases"

[tool.poetry.dependencies]
python = "^3.8.1"
importlib-metadata = "^7.0.1"
langcodes = "^3.1"
httpx = ">=0.18.1"
arrow = "^1.1"
pyjwt = "^2.8.0"
pydantic = "^2.5.1"
hishel = "^0.0.19"

[tool.poetry.dev-dependencies]
pre-commit = "^3.0.0"
black = ">=23.9.1"
flake8 = "^6.0.0"
flake8-bugbear = "^23.7.10"
flake8-comprehensions = "^3.12.0"
pylint = "^3.0.0"
isort = "^5.10.1"
codespell = "^2.0.0"
pytest = "^7.2.0"
pytest-pretty = "^1.2.0"
pytest-asyncio = "^0.21.1"

[tool.pylint.messages_control]
# Reasons disabled:
# too-many-* - not enforced for the sake of readability
# too-few-* - same as too-many-*
disable = [
    "too-few-public-methods",
    "too-many-arguments",
    "too-many-instance-attributes",
    "duplicate-code",
    "logging-fstring-interpolation",
    ]

[tool.pylint.format]
max-line-length = 99

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
force_sort_within_sections = true
combine_as_imports = true
