[tool.poetry]
name = "mytoyota"
description = "Python client for Toyota Connected Services."
authors = ["Simon Grud Hansen <simongrud@gmail.com>"]
license = "MIT"
readme = "README.md"
version = "0.0.0"
packages = [
  {include = "mytoyota"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = [
    "Toyota",
    "Car",
    "MYT",
]
homepage = "https://github.com/DurgNomis-drol/mytoyota"
repository = "https://github.com/DurgNomis-drol/mytoyota"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/DurgNomis-drol/mytoyota/issues"
"Release Notes" = "https://github.com/DurgNomis-drol/mytoyota/releases"

[tool.poetry.dependencies]
python = "^3.9"
langcodes = "^3.1"
httpx = ">=0.18.1"
arrow = "^1.1"
importlib-metadata = "^7.0.1"
pyjwt = "^2.8.0"
pydantic = "^2.10.5"
hishel = "^0.0.19"

[tool.poetry.dev-dependencies]
pre-commit = "^3.0.0"
pre-commit-hooks = "^4.5.0"
ruff = "^0.1.9"
codespell = "^2.0.0"
pytest = "^7.2.0"
pytest-pretty = "^1.2.0"
pytest-asyncio = "^0.21.1"
pytest-httpx = "^0.28.0"

[tool.ruff]
select = [
    # Ruff specific
    "RUF",
    # Pylint
    "PL",
    # Pyflakes
    "F",
    # pep8-naming
    "N",
    # Pycodestyle
    "E",
    "W",
    "D",
    # flake8-2020
    "YTT",
    # flake8-async
    "ASYNC",
    # flake8-bugbear
    "B",
    # flake8-unused-arguments
    "ARG",
    # flake8-commas
    "COM",
    # Isort
    "I"
]
extend-ignore = ["PLR2004", "D203", "D213", "COM812"]
line-length = 99
fix = true

[tool.poetry-dynamic-versioning]
enable = true

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"
